--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,10 @@
 body {
   margin: 0;
-  font-family: Arial, sans-serif;
+  font-family:
+    Noto Sans KR,
+    Arial,
+    sans-serif;
+
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   width: 100%;
